Prevent style from shifting on short pages

--- a/forum/skins/default/media/style/style-sprite.css
+++ b/forum/skins/default/media/style/style-sprite.css
@@ -1,4 +1,8 @@
 
+html {
+    overflow-y: scroll;
+}
+
 body {
     color: #000000;
     font-family: arial, sans-serif;
